# Hackiwha

./: .env.example  .gitignore  README.md  requirements.txt  viralcoach.db
Hackiwha-ai/: .dockerignore  .env.example  .gitignore  README.md  ingest.py
Hackiwha-ai/app/: main.py
Hackiwha-ai/prompts/: article_summarizer.py  video_coach.py
Hackiwha-ai/routers/: partner_evaluation.py
Hackiwha-ai/services/: article_search.py  dummy_tool.py  llm.py  partial_prompts.py  tools.py
ai-service/: README.md  dockerfile  pyproject.toml
ai-service/app/: settings.py
ai-service/app/schemas/: brand.py
ai-service/data/faiss_index/: index.faiss
ai-service/data/knowledge_base/: hookformula_comedy.txt  hookformula_gaming.txt  hookformula_tech.txt  hookpsych_ab_testing_method.txt  hookpsych_checklist_killers.txt  hookpsych_content_type_mapping.txt  hookpsych_pre_publish_tests.txt  hookpsych_reliability_notes.txt  hookpsych_summary_rule.txt  sfx_refs_fitness.txt  sfx_refs_review.txt  sfx_refs_vlog.txt
ai-service/prompts/: partner_evaluator.py  stupid_llm.py
ai-service/routers/: video_coach.py
ai-service/services/: knowledge_base.py  partner_search.py
app/: config.py  main.py
app/db/: database.py  models.py
app/models/: schemas.py
app/routers/: AuthService.py  content.py
app/services/: ai_client.py  dataset_service.py  platform_api.py
back-end/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  requirements.txt
docs/: HANDOFF.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.test.tsx  App.tsx
(+82 files in other folders)
