[project]
name = "hackiwha-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.14.4",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.0",
    "huggingface-hub>=1.23.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "trafilatura>=2.1.0",
    "uvicorn>=0.51.0",
]
